log
Thu Apr 30 07:59:31 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode*aux = map->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:20: error: ‘map’ undeclared (first use in this function)
  105 |     treeNode*aux = map->root;
      |                    ^~~
treemap.c:105:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:107:15: error: request for member ‘left’ in something not a structure or union
  107 |         if(aux->left != NULL){
      |               ^~
treemap.c:108:22: error: request for member ‘left’ in something not a structure or union
  108 |             aux = aux->left;
      |                      ^~
treemap.c:111:12: error: returning ‘int *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  111 |     return aux;
      |            ^~~
22b5e0e
